--- a/packing/OBSEPluginDevPackage.targets
+++ b/packing/OBSEPluginDevPackage.targets
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?> 
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemDefinitionGroup>
     <ClCompile>
@@ -6,7 +6,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\..\lib\common\common.vcxproj">
+    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\..\lib\native\common\common.vcxproj">
     <!--<ProjectReference Include="..\common\common.vcxproj">-->
       <Project>{20c6411c-596f-4b85-be4e-8bc91f59d8a6}</Project>
       <CopyLocalSatelliteAssemblies>true</CopyLocalSatelliteAssemblies>
