--- a/packing/OBSEPluginDevPackage.targets
+++ b/packing/OBSEPluginDevPackage.targets
@@ -2,7 +2,8 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemDefinitionGroup>
     <ClCompile>
-	  <AdditionalIncludeDirectories>$(ProjectDir)\include\;$(ProjectDir)\include\obse\;$(MSBuildThisFileDirectory)..\..\lib\native\include\;$(MSBuildThisFileDirectory)..\..\lib\native\include\obse\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+	  <!--<AdditionalIncludeDirectories>$(ProjectDir)\include\;$(ProjectDir)\include\obse\;$(MSBuildThisFileDirectory)..\..\lib\native\include\;$(MSBuildThisFileDirectory)..\..\lib\native\include\obse\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>-->
+	  <AdditionalIncludeDirectories>$(ProjectDir)\include\;$(ProjectDir)\include\obse\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
